--- a/AspNetThrottle.NetCore/AspNetThrottle.NetCore.csproj
+++ b/AspNetThrottle.NetCore/AspNetThrottle.NetCore.csproj
@@ -8,7 +8,15 @@
     <Company />
     <Product />
     <PackageProjectUrl>https://github.com/donnytian/AspNetThrottle</PackageProjectUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netcoreapp2.0\AspNetThrottle.NetCore.xml</DocumentationFile>
