--- a/AspNetThrottle/AspNetThrottle.csproj
+++ b/AspNetThrottle/AspNetThrottle.csproj
@@ -8,7 +8,15 @@
     <Company />
     <Product />
     <PackageProjectUrl>https://github.com/donnytian/AspNetThrottle</PackageProjectUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>1701;1702;1705</NoWarn>
